# SimpleCMakeDemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMakeLibrary/: CMakeLists.txt
CMakeLibrary/include/: HelloWorld.h
CMakeLibrary/src/: HelloWorld.cpp
android-build/: README.md  cmake-build.sh
ios-build/: README.md  cmake-build.sh  cmake-output.sh  ios.toolchain.cmake
linux-build/: cmake-build.sh
win-build/: README.md  cmake-build.bat  cmake-output.bat
